--- a/src/app/pages/home/seccion-seguridad/seccion-seguridad.component.html
+++ b/src/app/pages/home/seccion-seguridad/seccion-seguridad.component.html
@@ -1,54 +1,47 @@
-
 <section>
-    <div class="container text-center">
-        <div class="row mt-5 mb-5">
-            <div class="col-md-12">
-                <h2>We treat your data as if it was our own</h2>
-            </div>
-        </div>
-
-        <div class="row  mb-5 justify-content-center" >
-            <div class="col-md-5 col-sm-5 "  >
-                <div>
-                  <div class="services-details">
-                    <div class="single-services">
-                      <a class="services-icon" href="#">
-                        <i class="fa fa-lock"></i>
-                      </a>
-                      <h4>Seguridad</h4>
-                      <p class="text-justify">
-                        will have to make sure the prototype looks finished by
-                        inserting text or photo.make sure the prototype looks finished
-                        by.
-                      </p>
-                    </div>
-                  </div>
-                  <!-- end about-details -->
-                </div>
-              </div>
-
-              <div class="col-md-5 col-sm-5 ">
-                <div class="about-move ">
-                  <div class="services-details ">
-                    <div class="single-services ">
-                      <a class="services-icon" href="#">
-                        <i class="fa fa-eye-slash"></i>
-                      </a>
-                      <h4>Privacidad</h4>
-                      <p class="text-justify">
-                        will have to make sure the prototype looks finished by
-                        inserting text or photo.make sure the prototype looks finished
-                        by.
-                      </p>
-                    </div>
-                  </div>
-                  <!-- end about-details -->
-                </div>
-              </div>
-              
-        </div>
-
+  <div class="container text-center">
+    <div class="row mt-5 mb-5">
+      <div class="col-md-12">
+        <h2>Tratamos tus datos con los más altos estándares de seguridad.</h2>
+      </div>
     </div>
+
+    <div class="row mb-5 justify-content-center">
+      <div class="col-md-5 col-sm-5">
+        <div>
+          <div class="services-details">
+            <div class="single-services">
+              <a class="services-icon" href="#">
+                <i class="fa fa-lock"></i>
+              </a>
+              <h4>Seguridad</h4>
+              <p class="text-justify">
+                Seguridad. Usamos cifrado de 128-bits para proteger la
+                transmisión de tus datos hasta nuestro sitio.
+              </p>
+            </div>
+          </div>
+          <!-- end about-details -->
+        </div>
+      </div>
+
+      <div class="col-md-5 col-sm-5">
+        <div class="about-move">
+          <div class="services-details">
+            <div class="single-services">
+              <a class="services-icon" href="#">
+                <i class="fa fa-eye-slash"></i>
+              </a>
+              <h4>Privacidad</h4>
+              <p class="text-justify">
+                Privacidad. Nunca compartiremos tus datos personales con
+                terceros no autorizados.
+              </p>
+            </div>
+          </div>
+          <!-- end about-details -->
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
-
-
