pagina de datos de cliente y pago -- fix bug

--- a/src/app/pages/agradecimiento/agradecimiento.component.html
+++ b/src/app/pages/agradecimiento/agradecimiento.component.html
@@ -1,6 +1,6 @@
 <br />
 
-<div class="jumbotron jumbotron-fluid m-5 text-center">
+<div class="jumbotron jumbotron-fluid m-5 text-center animate__animated animate__fadeInDown animate__faster">
   <img
     src="./assets/img/credit_online_8.png"
     class="rounded mx-auto d-block mx-auto mb-3"
