--- a/src/app/components/tc/tarjetav2/tarjetav2.component.html
+++ b/src/app/components/tc/tarjetav2/tarjetav2.component.html
@@ -1,85 +1,45 @@
-<br />
-<div 
-    class="card mb-3 w-100 animate__animated animate__fadeInDown animate__faster" 
-    (mouseover)  = "mouseIsOver = true"
-    (mouseleave) = "mouseIsOver = false"
-    [ngClass]  = "{ 'tc-over' : mouseIsOver, 'tc-not-over': ! mouseIsOver }">
-    
-  <div class="row">
-    <div class="col-lg-3 col-md-3 center">
-      <div class="card m-3" style=" border: none !important">
-        <img
-          [src]="tarjeta.imagen"
-          class="card-img-top"
-          alt="..."
-        />
-        <div class="card-body p-0">
-          <div
-            class="btn-group w-100 center mb-2"
-            role="group"
-            aria-label="Basic example"
-          >
-            <button 
-              type="button" 
-              (click) = "agregarAlCarrito(tarjeta)"
-              class="btn btn-success">Agregar al carrito 
+<div class="card animate__animated animate__fadeInDown animate__faster" style="width: 18rem">
+  <img [src]="tarjeta.imagen" class="card-img-top" alt="..." />
+  <div class="card-body">
+    <h5 class="card-title">{{ tarjeta.banco }}</h5>
+    <h3>{{ tarjeta.nombre }}</h3>
+    <p class="card-text">
+      Some quick example text to build on the card title and make up the bulk of
+      the card's content.
+    </p>
+  </div>
+ 
+  <div class="card-body">
+    <ul class="list-group list-group-flush m-4">
+      <li>
+        <i class="fa fa-check credit-text-color-second"></i>
+        <small> Paga en miles de comercios en todo el mundo</small>
+      </li>
+      <li>
+        <i class="fa fa-check credit-text-color-second"></i>
+        <small> El 9% de tus compras en Puntos BBVA</small>
+      </li>
+      <li>
+        <i class="fa fa-check credit-text-color-second"></i>
+        <small> Paga en miles de comercios en todo el mundo</small>
+      </li>
+      <li>
+        <i class="fa fa-check credit-text-color-second"></i>
+        <small> El 9% de tus compras en Puntos BBVA</small>
+      </li>
+    </ul>
+  </div>
+
+  <div class="card-footer">
+    <div class="btn-group btn-group-sm" role="group" aria-label="First group">
+      <!-- <button type="button" class="btn btn-info ripple">Solicitar</button> -->
+      <button 
+        type="button"
+        (click) = "agregarAlCarrito(tarjeta)" 
+        class="btn btn-success">
+        Agregar al carrito 
               <i class="fa fa-cart-plus"></i>
-            </button>
-          </div>
-
-          <button type="button" class="btn btn-link w-100">
-            <small class="text-muted">Más información...</small>
-          </button>
-        </div>
-      </div>
+      </button>
     </div>
-    <div class="col-lg-9 col-md-9 col-sm-12 p-5">
-      <h4>{{ tarjeta.banco }}</h4>
-      <h3>{{ tarjeta.nombre }}</h3>
-      <p class="font-weight-lighter text-justify font-">
-          <small>
-            descripción de la tarjeta
-          </small>
-      </p>
-      <hr />
-      <div class="row">
-        <div class="col-md-6 border-left ">
-          <ul class="text-muted">
-            <li>
-              <i class="fa fa-check credit-text-color-second"></i>
-              <small> Paga en miles de comercios en todo el mundo</small>
-            </li>
-            <li>
-              <i class="fa fa-check credit-text-color-second"></i>
-              <small> El 9% de tus compras en Puntos BBVA</small>
-            </li>
-          </ul>
-        </div>
-        <div class="col-md-6 border-left ">
-          <ul class="text-muted">
-                <li>
-                  <i class="fa fa-check credit-text-color-second"></i>
-                  <small> Paga en miles de comercios en todo el mundo</small>
-                </li>
-                <li>
-                  <i class="fa fa-check credit-text-color-second"></i>
-                  <small> El 9% de tus compras en Puntos BBVA</small>
-                </li>
-              </ul>
-        </div>
-        <!-- <div class="col-md-4 border-left">
-          <ul class="text-muted">
-                <li>
-                  <i class="fa fa-check credit-text-color-second"></i>
-                  <small> Paga en miles de comercios en todo el mundo</small>
-                </li>
-              </ul>
-        </div> -->
-       
-      </div>
-    </div>
-
-    <br />
   </div>
 </div>
-
