--- a/src/app/components/pago/pagotarjeta/pagotarjeta.component.html
+++ b/src/app/components/pago/pagotarjeta/pagotarjeta.component.html
@@ -47,7 +47,7 @@
 
     <div class="col-12 text-right">
       <h5>Total:</h5>
-      <h2>$ 500.00</h2>
+      <h2 class="text-success"> {{ carritoServ.costoTotal | currency: 'USD' }} </h2>
     </div>
 
   </div>
