--- a/src/app/components/tc/tarjetav2/tarjetav2.component.scss
+++ b/src/app/components/tc/tarjetav2/tarjetav2.component.scss
@@ -10,3 +10,11 @@
 ul {
     list-style: none !important;
 }
+
+.card-footer {
+    padding: none !important;
+}
+
+.card-footer > button {
+    width: 100% !important;
+}
