ultimas de la version

--- a/src/app/pages/agradecimiento/agradecimiento.component.html
+++ b/src/app/pages/agradecimiento/agradecimiento.component.html
@@ -11,7 +11,7 @@
     <i class="fa fa-check-square-o" aria-hidden="true"></i>
   </h1>
 
-  <h3 class="display-4">¡Hemos recibido tu alta exitosamente!</h3>
+  <h4 class="display-5">¡Hemos recibido tu solicitud exitosamente!</h4>
   <p class="lead">
     Recibirás el comprobante de tu compra en el correo usuario@tucorreo.com y
     estaremos informándote del seguimiento y resultado de tu solicitud.
