--- a/src/app/pages/home/seccion-seguridad/seccion-seguridad.component.html
+++ b/src/app/pages/home/seccion-seguridad/seccion-seguridad.component.html
@@ -16,7 +16,7 @@
               </a>
               <h4>Seguridad</h4>
               <p class="text-justify">
-                Seguridad. Usamos cifrado de 128-bits para proteger la
+                Usamos cifrado de 128-bits para proteger la
                 transmisión de tus datos hasta nuestro sitio.
               </p>
             </div>
@@ -34,7 +34,7 @@
               </a>
               <h4>Privacidad</h4>
               <p class="text-justify">
-                Privacidad. Nunca compartiremos tus datos personales con
+                Nunca compartiremos tus datos personales con
                 terceros no autorizados.
               </p>
             </div>
