--- a/src/app/pages/home/servs/servs.component.scss
+++ b/src/app/pages/home/servs/servs.component.scss
@@ -30,7 +30,7 @@
 .services-details:hover h4,
 .services-details:hover 
 .services-icon  {
-  color: $credit-color-second;
+  color: var(--bsuccess);
 }
 
 .row.second-row {
