--- a/src/app/components/pago/pagotarjeta/pagotarjeta.component.html
+++ b/src/app/components/pago/pagotarjeta/pagotarjeta.component.html
@@ -6,8 +6,8 @@
   <div class="form-group row">
     <div class="col-12">
       <mat-form-field appearance="fill">
-        <mat-label>Nombre</mat-label>
-        <input matInput placeholder="Nombre en la tarjeta">
+        <mat-label>Nombre del tarjetahabiente</mat-label>
+        <input matInput>
         <mat-icon matSuffix>account_circle</mat-icon>
         
       </mat-form-field>
@@ -47,7 +47,10 @@
 
     <div class="col-12 text-right">
       <h5>Total:</h5>
-      <h2 class="text-success"> {{ carritoServ.costoTotal | currency: 'USD' }} </h2>
+      <h2 class="text-success"> {{ carritoServ.costoTotal | currency: 'USD' }} <small>MXP</small></h2> 
+      <p class="text-muted">
+       IVA incluido
+      </p>
     </div>
 
   </div>
