--- a/src/app/components/tc/tarjetav2/tarjetav2.component.html
+++ b/src/app/components/tc/tarjetav2/tarjetav2.component.html
@@ -5,14 +5,13 @@
   <div class="card-body">
     <h5 class="card-title">{{ tarjeta.banco }}</h5>
     <h3>{{ tarjeta.nombre }}</h3>
-    <p class="card-text">
-      Some quick example text to build on the card title and make up the bulk of
-      the card's content.
+    <p class="card-text text-justify">
+      Al comprar con tu tarjeta de crédito ganas puntos con los que puedes pagar en todo tipo de comercios y tiendas.
     </p>
   
     <ul class="list-group list-group-flush">
       <li>
-        <i class="fa fa-check credit-text-color-second"></i>
+        <i class="fa fa-check credit-text-color-second text-justify"></i>
         <small> Paga en miles de comercios en todo el mundo</small>
       </li>
       <li>
