--- a/src/app/pages/datos-personales/datos-personales.component.scss
+++ b/src/app/pages/datos-personales/datos-personales.component.scss
@@ -1,3 +1,5 @@
+@import "../../../styles.scss";
+
 .mat-form-field {
     width: 100% !important;
 }
@@ -17,4 +19,30 @@
   
   input.example-right-align {
     -moz-appearance: textfield;
+  }
+
+  .mat-form-field {
+    margin-right: 12px;
+  }
+
+
+  ::ng-deep .mat-calendar-body-today:not(.mat-calendar-body-selected){
+    border-color: var(--bsuccess);
+  }
+
+  ::ng-deep .mat-calendar-body-selected {
+    background-color: var(--bsuccess) !important;
+  }
+
+  ::ng-deep .mat-icon-button {
+    color: var(--bsuccess) !important;
+  }
+
+  ::ng-deep .mat-button-wrapper {
+    color: var(--bsuccess) !important;
+    
+  }
+ 
+  small {
+    font-size: small !important;
   }
