--- a/src/app/pages/home/carausel/carausel.component.html
+++ b/src/app/pages/home/carausel/carausel.component.html
@@ -16,7 +16,7 @@
         <h5>
           Revisa y compara las tarjetas de acuerdo con tus necesidades.
         </h5>
-        <a href="#about" class="btn-get-started scrollto">Solicitar</a>
+        <a routerLink="/tarjetas" class="btn-get-started scrollto">Solicitar</a>
       </div>
     </div>
     <div class="carousel-item">
@@ -30,7 +30,7 @@
         <h5>
           Revisa y compara las tasas de interés para tu préstamo en un solo lugar.
         </h5>
-        <a href="#about" class="btn-get-started scrollto">Solicitar</a>
+        <a routerLink="/tarjetas" class="btn-get-started scrollto">Solicitar</a>
       </div>
     </div>
     <div class="carousel-item">
@@ -53,7 +53,7 @@
         <h5>
           Revisa y compara la mejor opción para proteger tu auto
         </h5>
-        <a href="#about" class="btn-get-started scrollto">Solicitar</a>
+        <a routerLink="/tarjetas" class="btn-get-started scrollto">Solicitar</a>
       </div>
     </div>
     <!-- <div class="carousel-item">
