Se agregan imagenes formateadas

--- a/src/app/pages/datos-personales/datos-personales.component.html
+++ b/src/app/pages/datos-personales/datos-personales.component.html
@@ -27,7 +27,7 @@
                       !emailFormControl.hasError('required')
                     "
                   >
-                    Please enter a valid email address
+                    Por favor ingrese un email correcto
                   </mat-error>
                   <mat-error *ngIf="emailFormControl.hasError('required')">
                     El email es <strong>requerido</strong>
