--- a/src/app/components/pago/pagotarjeta/pagotarjeta.component.html
+++ b/src/app/components/pago/pagotarjeta/pagotarjeta.component.html
@@ -66,7 +66,7 @@
           <i class="fa fa-chevron-left" aria-hidden="true"></i> Regresar</button>
         <a 
           type="button" 
-          routerLink="/agradecimiento"
+          (click) = "pagar()"
           class="btn btn-success w-50" 
           >Pagar Ahora <i class="fa fa-check-circle-o" aria-hidden="true"></i></a>
       </div>
