--- a/src/app/pages/home/carausel/carausel.component.html
+++ b/src/app/pages/home/carausel/carausel.component.html
@@ -14,7 +14,7 @@
       <div class="carousel-caption d-none d-md-block">
         <h1>Tarjeta de Crédito</h1>
         <h5>
-          Revisa y compara las tarjetas de acuerdo con tus necesidades.
+          Busca y selecciona las tarjetas de acuerdo con tus necesidades.
         </h5>
         <a routerLink="/tarjetas" class="btn-get-started scrollto">Solicitar</a>
       </div>
@@ -28,7 +28,7 @@
       <div class="carousel-caption d-none d-md-block">
         <h1>Crédito Hipotecario</h1>
         <h5>
-          Revisa y compara las tasas de interés para tu préstamo en un solo lugar.
+          Compara la mejor tasa de interés y tramita aquí mismo.
         </h5>
         <a routerLink="/tarjetas" class="btn-get-started scrollto">Solicitar</a>
       </div>
@@ -51,7 +51,7 @@
       <div class="carousel-caption d-none d-md-block">
         <h1 style="opacity: 1 !important">Seguro de Auto</h1>
         <h5>
-          Revisa y compara la mejor opción para proteger tu auto
+          Compara y contrata la mejor opción de seguros para tu auto.
         </h5>
         <a routerLink="/tarjetas" class="btn-get-started scrollto">Solicitar</a>
       </div>
