--- a/src/app/pages/home/servs/servs.component.html
+++ b/src/app/pages/home/servs/servs.component.html
@@ -21,9 +21,7 @@
                 </a>
                 <h4 class="credit-text-color-primary">Tarjetas de crédito</h4>
                 <p class="text-justify">
-                  will have to make sure the prototype looks finished by
-                  inserting text or photo.make sure the prototype looks finished
-                  by.
+                  Solicita y obtén la tarjeta de crédito que más se adapte a tus necesidades.
                 </p>
               </div>
             </div>
@@ -42,9 +40,7 @@
                 </a>
                 <h4 class="credit-text-color-primary">Crédito Autos</h4>
                 <p class="text-justify">
-                  will have to make sure the prototype looks finished by
-                  inserting text or photo.make sure the prototype looks finished
-                  by.
+                  Compara las mejores opciones y solicita tu crédito automotriz.
                 </p>
               </div>
             </div>
@@ -62,9 +58,7 @@
                 </a>
                 <h4 class="credit-text-color-primary">Créditos Hipotecarios</h4>
                 <p class="text-justify">
-                  will have to make sure the prototype looks finished by
-                  inserting text or photo.make sure the prototype looks finished
-                  by.
+                  Cotiza la mejora tasa de interés y tramita tu crédito hipotecario.
                 </p>
               </div>
             </div>
@@ -83,9 +77,7 @@
                 </a>
                 <h4 class="credit-text-color-primary">Seguro de Vida</h4>
                 <p class="text-justify ">
-                  will have to make sure the prototype looks finished by
-                  inserting text or photo.make sure the prototype looks finished
-                  by.
+                  Busca la mejor opción de seguros de gastos médicos mayores o seguros de vida.
                 </p>
               </div>
             </div>
@@ -104,9 +96,7 @@
                 </a>
                 <h4 class="credit-text-color-primary">Créditos Personales</h4>
                 <p class="text-justify">
-                  will have to make sure the prototype looks finished by
-                  inserting text or photo.make sure the prototype looks finished
-                  by.
+                  Selecciona la mejor opción y solicita tu crédito personal.
                 </p>
               </div>
             </div>
@@ -124,9 +114,7 @@
                 </a>
                 <h4 class="credit-text-color-primary">Seguro de auto</h4>
                 <p class="text-justify">
-                  will have to make sure the prototype looks finished by
-                  inserting text or photo.make sure the prototype looks finished
-                  by.
+                  Tenemos la opción a tu medida para proteger tu Auto.
                 </p>
               </div>
             </div>
