--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
 <!-- Image and text -->
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top topbar">
+<nav class="navbar navbar-expand-lg navbar-light bg-light-bootstrap shadow fixed-top topbar">
   <a class="navbar-brand" href="#">
     <img
       src="assets/img/credit_online_8.png"
