--- a/src/app/pages/home/pasos/pasos.component.html
+++ b/src/app/pages/home/pasos/pasos.component.html
@@ -7,7 +7,7 @@
       <div class="container" data-aos="fade-up">
         <h2 class="display-5 mb-5">Solicita tu crédito en 3 pasos</h2>
         <div class="row">
-          <div class="col-lg-4 col-md-6 hvr-float-shadow">
+          <div class="col-lg-4 col-md-6 hvr-float-shadow step">
             <div class="count-box">
               <i class="fa fa-file-text-o"></i>
               <span data-toggle="counter-up">1</span>
@@ -18,7 +18,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mt-5 mt-md-0 hvr-float-shadow">
+          <div class="col-lg-4 col-md-6 mt-5 mt-md-0 hvr-float-shadow step">
             <div class="count-box">
               <i class="fa fa-users mb-5"></i>
               <span data-toggle="counter-up">2</span>
@@ -29,7 +29,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mt-5 mt-lg-0 hvr-float-shadow">
+          <div class="col-lg-4 col-md-6 mt-5 mt-lg-0 hvr-float-shadow step">
             <div class="count-box">
               <i class="fa fa-money"></i>
               <span data-toggle="counter-up">3</span>
