--- a/src/app/pages/home/pasos/pasos.component.scss
+++ b/src/app/pages/home/pasos/pasos.component.scss
@@ -28,7 +28,6 @@ h4 {
     border-radius: 45%;
     border: 2px solid #fff;
     box-shadow: 0px 2px 25px rgba(0, 0, 0, 0.1);
-    
   }
   
   .counts .count-box span {
@@ -45,3 +44,6 @@ h4 {
     font-size: 14px;
   }
   
+  .count-box {
+    height: 250px !important;
+  }
