--- a/src/app/pages/ofertas/tarjetacredito/tarjetacredito.component.html
+++ b/src/app/pages/ofertas/tarjetacredito/tarjetacredito.component.html
@@ -1,8 +1,6 @@
-<div class="row">
-  <div class="col-md-12">
-    <div class="content" style="margin-top: 5% !important">
-      <div class="row mt-5 p-5">
-        <div class="col">
+    <div class="content" >
+      <div class="row">
+        <div class="col-12">
           <!-- INGRESO MENSUAL -->
           <mat-card class="mb-3">
             <div class="row">
@@ -38,10 +36,8 @@
           </mat-card>
           <!--/ INGRESO MENSUAL -->
         </div>
-      </div>
-    </div>
     
-    <div class="container">
+    <div class="container mt-3">
       <div class="row">
         <div class="col-md-4 col-sm-12" *ngFor="let tarjeta of tarjetas">
           <app-tarjetav2 [tarjeta]="tarjeta"></app-tarjetav2>
